# sq-admintools

./: .bacon-locations  Cargo.toml  README.md  lootbox.yml
output/lootbox/: wicked_box.yml
src/: main.rs
src/api/: lootbox_gen.rs  mod.rs  query_test.rs
src/utils/: app.rs  mod.rs  routes.rs  settings.rs  template.rs  tracing.rs
static/styles/: style.scss
templates/: base.html  header.html  index.html  lootbox.html  test.html
